--- a/camagru/Public/assets/css/general.css
+++ b/camagru/Public/assets/css/general.css
@@ -50,6 +50,7 @@ body {
     border-left: 1px solid rgba(0,0,0,.0975);
     width: 25rem;
     visibility: hidden;
+    opacity: 0;
 }
 
 .aside-bar .head {
@@ -83,9 +84,19 @@ body[has_aside] .aside-bar {
     animation: show_aside 0.5s;
 }
 
+body[has_aside] .overlay {
+    -webkit-animation: show_overlay 0.5s;
+    animation: show_overlay 0.5s;
+}
+
 body .aside-bar {
     -webkit-animation: hide_aside 0.5s;
     animation: hide_aside 0.5s;
+}
+
+body .overlay {
+    -webkit-animation: hide_overlay 0.5s;
+    animation: hide_overlay 0.5s;
 }
 
 @-webkit-keyframes show_aside {
@@ -96,6 +107,16 @@ body .aside-bar {
 @keyframes show_aside {
     from {width:0;}
     to {width:25rem;}
+}
+
+@-webkit-keyframes show_overlay {
+    from {opacity:0;}
+    to {opacity:1;}
+}
+
+@keyframes show_overlay {
+    from {opacity:0;}
+    to {opacity:1;}
 }
 
 @-webkit-keyframes hide_aside {
