--- a/camagru/Public/assets/css/general.css
+++ b/camagru/Public/assets/css/general.css
@@ -140,6 +140,12 @@ body .overlay {
     to {width:0;visibility: hidden;opacity:0;}
 }
 
+@media only screen and (max-width: 500px) {
+    .aside-bar {
+        width: 100%;
+    }
+}
+
 /** Header */
 
 header {
