--- a/camagru/Public/assets/css/general.css
+++ b/camagru/Public/assets/css/general.css
@@ -52,6 +52,7 @@ body {
 }
 
 .aside-bar {
+    float: right;
     width: 100%;
     height: 100%;
     visibility: hidden;
@@ -108,12 +109,12 @@ body .overlay {
 
 @-webkit-keyframes show_aside {
     from {width:0;}
-    to {width:25rem;}
+    to {width:100%;}
 }
 
 @keyframes show_aside {
     from {width:0;}
-    to {width:25rem;}
+    to {width:100%;}
 }
 
 @-webkit-keyframes show_overlay {
@@ -137,12 +138,12 @@ body .overlay {
 }
 
 @-webkit-keyframes hide_aside {
-    from {width:25rem;visibility: visible;opacity:1;}
+    from {width:100%;visibility: visible;opacity:1;}
     to {width:0;visibility: hidden;opacity:0;}
 }
 
 @keyframes hide_aside {
-    from {width:25rem;visibility: visible;opacity:1;}
+    from {width:100%;visibility: visible;opacity:1;}
     to {width:0;visibility: hidden;opacity:0;}
 }
 
