62 files changed, 4448 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/general.css
+++ b/camagru/Public/assets/css/general.css
@@ -148,7 +148,7 @@ body .overlay {
 }
 
 @media only screen and (max-width: 500px) {
-    .aside-bar {
+    .aside-row {
         width: 100%;
     }
 }
