62 files changed, 4465 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/general.css
+++ b/camagru/Public/assets/css/general.css
@@ -105,6 +105,11 @@ body .aside-bar {
     animation: hide_aside 0.5s;
 }
 
+body .aside-row {
+    -webkit-animation: hide_row 0.5s;
+    animation: hide_row 0.5s;
+}
+
 body .overlay {
     -webkit-animation: hide_overlay 0.5s;
     animation: hide_overlay 0.5s;
@@ -148,6 +153,16 @@ body .overlay {
 @keyframes hide_aside {
     from {width:100%;visibility: visible;opacity:1;}
     to {width:0;visibility: hidden;opacity:0;}
+}
+
+@-webkit-keyframes hide_row {
+    from {display:inline-block;}
+    to {display: none;}
+}
+
+@keyframes hide_row {
+    from {display:inline-block;}
+    to {display: none;}
 }
 
 @media only screen and (max-width: 500px) {
