62 files changed, 4467 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/general.css
+++ b/camagru/Public/assets/css/general.css
@@ -106,8 +106,10 @@ body .aside-bar {
 }
 
 body .aside-row {
-    -webkit-animation: hide_row 0.5s;
-    animation: hide_row 0.5s;
+    -webkit-animation: hide_row;
+    -webkit-animation-delay: 0.5s;
+    animation: hide_row;
+    animation-delay: 0.5s;
 }
 
 body .overlay {
