--- a/camagru/Public/assets/css/general.css
+++ b/camagru/Public/assets/css/general.css
@@ -106,10 +106,8 @@ body .aside-bar {
 }
 
 body .aside-row {
-    -webkit-animation: hide_row;
-    -webkit-animation-delay: 0.5s;
-    animation: hide_row;
-    animation-delay: 0.5s;
+    -webkit-animation: hide_row 1s;
+    animation: hide_row 1s;
 }
 
 body .overlay {
