62 files changed, 4466 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/general.css
+++ b/camagru/Public/assets/css/general.css
@@ -106,8 +106,9 @@ body .aside-bar {
 }
 
 body .aside-row {
-    -webkit-animation: hide_row 1s;
-    animation: hide_row 1s;
+    -webkit-animation: hide_row 0;
+    animation: hide_row 0;
+    animation-delay: 1s;
 }
 
 body .overlay {
