--- a/camagru/Public/assets/css/general.css
+++ b/camagru/Public/assets/css/general.css
@@ -69,7 +69,7 @@ body {
 
 .aside-bar .head .title {
     text-align: center;
-    margin: auto 4rem auto 0;
+    margin: auto 0 auto 4rem;
     flex: 1;
 }
 
