62 files changed, 4497 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/general.css
+++ b/camagru/Public/assets/css/general.css
@@ -75,7 +75,6 @@ body {
 
 .aside-bar .head .icon {
     width: 4rem;
-    font-size: 1.25rem;
     margin: auto;
     padding: 0;
     display: flex;
@@ -83,6 +82,10 @@ body {
 
 .aside-bar .head .icon a {
     margin: auto;
+    text-decoration: none;
+    font-size: 1.25rem;
+    color: #000;
+    text-align: center;
 }
 
 .aside-bar li {
