--- a/camagru/Public/assets/css/general.css
+++ b/camagru/Public/assets/css/general.css
@@ -88,6 +88,11 @@ body {
     text-align: center;
 }
 
+.aside-bar .container {
+    width: 100%;
+    height: 100%;
+}
+
 .aside-bar li {
     list-style-type: none;
 }
