62 files changed, 4510 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/general.css
+++ b/camagru/Public/assets/css/general.css
@@ -93,6 +93,10 @@ body {
     height: 100%;
 }
 
+.aside-bar .container {
+    overflow-y: auto;
+}
+
 .aside-bar li {
     list-style-type: none;
 }
