--- a/camagru/Public/assets/css/general.css
+++ b/camagru/Public/assets/css/general.css
@@ -95,9 +95,10 @@ body {
 }
 
 .aside-bar .aside-button {
-    width: 100%;
-    height: 2rem;
-
+    width: 75%;
+    height: 4rem;
+    margin: 0 auto;
+    display: flex;
 }
 
 .aside-bar .aside-button a {
