--- a/camagru/Public/assets/css/general.css
+++ b/camagru/Public/assets/css/general.css
@@ -95,10 +95,17 @@ body {
 }
 
 .aside-bar .aside-button {
-    width: 75%;
-    height: 4rem;
-    margin: 0 auto;
+    width: 100%;
+    height: 3rem;
     display: flex;
+    position: absolute;
+    bottom: 0;
+}
+
+.aside-button .button-content {
+    margin: 0 auto;
+    width: 75%;
+    position: relative;
 }
 
 .aside-bar .aside-button a {
