62 files changed, 4570 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/general.css
+++ b/camagru/Public/assets/css/general.css
@@ -103,7 +103,7 @@ body {
 }
 
 .aside-button .button-content {
-    margin: 0 auto;
+    margin: 1rem auto;
     width: 75%;
     position: relative;
     display: flex;
