62 files changed, 4571 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/general.css
+++ b/camagru/Public/assets/css/general.css
@@ -100,10 +100,11 @@ body {
     display: flex;
     position: absolute;
     bottom: 0;
+    margin: 1rem 0;
 }
 
 .aside-button .button-content {
-    margin: 1rem auto;
+    margin: 0 auto;
     width: 75%;
     position: relative;
     display: flex;
