--- a/camagru/Public/assets/css/general.css
+++ b/camagru/Public/assets/css/general.css
@@ -101,6 +101,8 @@ body {
     position: absolute;
     bottom: 0;
     margin: 1rem 0;
+    background-color: #fafafa;
+    border: 1px solid rgba(0,0,0,.0975);
 }
 
 .aside-button .button-content {
