62 files changed, 4580 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/general.css
+++ b/camagru/Public/assets/css/general.css
@@ -117,6 +117,13 @@ body {
     margin: auto;
 }
 
+.aside-button .button-login {
+    background-color: limegreen;
+}
+
+.aside-button:hover {
+}
+
 .aside-bar li {
     list-style-type: none;
 }
