62 files changed, 4580 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/general.css
+++ b/camagru/Public/assets/css/general.css
@@ -117,7 +117,7 @@ body {
     margin: auto;
 }
 
-.aside-button .button-login {
+.aside-button.button-login .button-content {
     background-color: limegreen;
 }
 
