62 files changed, 4580 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/general.css
+++ b/camagru/Public/assets/css/general.css
@@ -118,7 +118,7 @@ body {
 }
 
 .aside-button.button-login .button-content {
-    background-color: limegreen;
+    background-color: #2b2b2b;
 }
 
 .aside-button:hover {
