--- a/camagru/Public/assets/css/general.css
+++ b/camagru/Public/assets/css/general.css
@@ -119,6 +119,7 @@ body {
 
 .aside-button.button-login .button-content {
     background-color: #2b2b2b;
+    color: #fff;
 }
 
 .aside-button:hover {
