--- a/camagru/Public/assets/css/general.css
+++ b/camagru/Public/assets/css/general.css
@@ -115,6 +115,9 @@ body {
 .aside-bar .aside-button a {
     padding: 0;
     margin: auto;
+    text-decoration: none;
+    font-size: 1.25rem;
+    text-align: center;
 }
 
 .aside-button.button-login .button-content {
