62 files changed, 4587 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/general.css
+++ b/camagru/Public/assets/css/general.css
@@ -121,7 +121,10 @@ body {
 }
 
 .aside-button.button-login .button-content {
-    background-color: #2b2b2b;
+    background-color: #2b3441;
+}
+
+.aside-button.button-login .button-content a {
     color: #fff;
 }
 
