--- a/camagru/Public/assets/css/general.css
+++ b/camagru/Public/assets/css/general.css
@@ -129,6 +129,10 @@ body {
     background-color: #2b3441;
 }
 
+.aside-button.button-login .button-content:hover {
+    background-color: rgba(43, 52, 50, .85);
+}
+
 .aside-button.button-login .button-content a {
     color: #fff;
 }
