--- a/camagru/Public/assets/css/general.css
+++ b/camagru/Public/assets/css/general.css
@@ -136,7 +136,7 @@ body {
 }
 
 .aside-button.button-login .button-content:hover {
-    background-color: black;
+    background-color: #101010;
 }
 
 .aside-button.button-login .button-content a {
