--- a/camagru/Public/assets/css/general.css
+++ b/camagru/Public/assets/css/general.css
@@ -183,11 +183,6 @@ body .overlay {
     animation: hide_overlay 0.5s;
 }
 
-body .aside-bar:not(:hover) body .aside-bar {
-    visibility: hidden;
-    transition: visibility 0.01s 1s;
-}
-
 @-webkit-keyframes show_aside {
     from {width:0;}
     to {width:100%;}
@@ -537,4 +532,81 @@ footer .links {
 @keyframes fadeout {
     from {bottom: 30px; opacity: 1;}
     to {bottom: 0; opacity: 0;}
+}
+
+/** Loading page */
+
+.loading-page {
+    position: fixed;
+    z-index: 99;
+    background-color: #2b2b2b;
+    display: flex;
+}
+
+.loading-content {
+    margin: auto;
+    border-radius: 50%;
+    overflow: hidden;
+}
+
+.cube-grid {
+    width: 40px;
+    height: 40px;
+    margin: 100px auto;
+}
+
+.cube-grid .cube {
+    width: 33%;
+    height: 33%;
+    background-color: #333;
+    float: left;
+    -webkit-animation: cube-grid-scale 1.3s infinite ease-in-out;
+    animation: cube-grid-scale 1.3s infinite ease-in-out;
+}
+.cube-grid:nth-child(0) {
+    -webkit-animation-delay: 0.2s;
+    animation-delay: 0.2s; }
+.cube-grid:nth-child(1) {
+    -webkit-animation-delay: 0.3s;
+    animation-delay: 0.3s; }
+.cube-grid:nth-child(2) {
+    -webkit-animation-delay: 0.4s;
+    animation-delay: 0.4s; }
+.cube-grid:nth-child(3) {
+    -webkit-animation-delay: 0.1s;
+    animation-delay: 0.1s; }
+.cube-grid:nth-child(4) {
+    -webkit-animation-delay: 0.2s;
+    animation-delay: 0.2s; }
+.cube-grid:nth-child(5) {
+    -webkit-animation-delay: 0.3s;
+    animation-delay: 0.3s; }
+.cube-grid:nth-child(6) {
+    -webkit-animation-delay: 0s;
+    animation-delay: 0s; }
+.cube-grid:nth-child(7) {
+    -webkit-animation-delay: 0.1s;
+    animation-delay: 0.1s; }
+.cube-grid:nth-child(8) {
+    -webkit-animation-delay: 0.2s;
+    animation-delay: 0.2s; }
+
+@-webkit-keyframes cube-grid-scale {
+    0%, 70%, 100% {
+        -webkit-transform: scale3D(1, 1, 1);
+        transform: scale3D(1, 1, 1);
+    } 35% {
+          -webkit-transform: scale3D(0, 0, 1);
+          transform: scale3D(0, 0, 1);
+      }
+}
+
+@keyframes cube-grid-scale {
+    0%, 70%, 100% {
+        -webkit-transform: scale3D(1, 1, 1);
+        transform: scale3D(1, 1, 1);
+    } 35% {
+          -webkit-transform: scale3D(0, 0, 1);
+          transform: scale3D(0, 0, 1);
+      }
 }
