--- a/camagru/Public/assets/css/general.css
+++ b/camagru/Public/assets/css/general.css
@@ -541,6 +541,8 @@ footer .links {
     z-index: 99;
     background-color: #2b2b2b;
     display: flex;
+    width: 100%;
+    height: 100%;
 }
 
 .loading-content {
