62 files changed, 4696 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/general.css
+++ b/camagru/Public/assets/css/general.css
@@ -552,9 +552,8 @@ footer .links {
 }
 
 .cube-grid {
-    width: 40px;
-    height: 40px;
-    margin: 100px auto;
+    width: 5rem;
+    height: 5rem;
 }
 
 .cube-grid .cube {
@@ -565,31 +564,31 @@ footer .links {
     -webkit-animation: cube-grid-scale 1.3s infinite ease-in-out;
     animation: cube-grid-scale 1.3s infinite ease-in-out;
 }
-.cube-grid:nth-child(0) {
+.cube:nth-child(0) {
     -webkit-animation-delay: 0.2s;
     animation-delay: 0.2s; }
-.cube-grid:nth-child(1) {
+.cube:nth-child(1) {
     -webkit-animation-delay: 0.3s;
     animation-delay: 0.3s; }
-.cube-grid:nth-child(2) {
+.cube:nth-child(2) {
     -webkit-animation-delay: 0.4s;
     animation-delay: 0.4s; }
-.cube-grid:nth-child(3) {
+.cube:nth-child(3) {
     -webkit-animation-delay: 0.1s;
     animation-delay: 0.1s; }
-.cube-grid:nth-child(4) {
+.cube:nth-child(4) {
     -webkit-animation-delay: 0.2s;
     animation-delay: 0.2s; }
-.cube-grid:nth-child(5) {
+.cube:nth-child(5) {
     -webkit-animation-delay: 0.3s;
     animation-delay: 0.3s; }
-.cube-grid:nth-child(6) {
+.cube:nth-child(6) {
     -webkit-animation-delay: 0s;
     animation-delay: 0s; }
-.cube-grid:nth-child(7) {
+.cube:nth-child(7) {
     -webkit-animation-delay: 0.1s;
     animation-delay: 0.1s; }
-.cube-grid:nth-child(8) {
+.cube:nth-child(8) {
     -webkit-animation-delay: 0.2s;
     animation-delay: 0.2s; }
 
