--- a/camagru/Public/assets/css/general.css
+++ b/camagru/Public/assets/css/general.css
@@ -559,47 +559,57 @@ footer .links {
 .cube-grid .cube {
     width: 33%;
     height: 33%;
-    background-color: #333;
+    background-color: #fff;
     float: left;
     -webkit-animation: cube-grid-scale 1.3s infinite ease-in-out;
     animation: cube-grid-scale 1.3s infinite ease-in-out;
 }
+
 .cube:nth-child(0) {
     -webkit-animation-delay: 0.2s;
-    animation-delay: 0.2s; }
+    animation-delay: 0.2s;
+}
 .cube:nth-child(1) {
     -webkit-animation-delay: 0.3s;
-    animation-delay: 0.3s; }
+    animation-delay: 0.3s;
+}
 .cube:nth-child(2) {
     -webkit-animation-delay: 0.4s;
-    animation-delay: 0.4s; }
+    animation-delay: 0.4s;
+}
 .cube:nth-child(3) {
     -webkit-animation-delay: 0.1s;
-    animation-delay: 0.1s; }
+    animation-delay: 0.1s;
+}
 .cube:nth-child(4) {
     -webkit-animation-delay: 0.2s;
-    animation-delay: 0.2s; }
+    animation-delay: 0.2s;
+}
 .cube:nth-child(5) {
     -webkit-animation-delay: 0.3s;
-    animation-delay: 0.3s; }
+    animation-delay: 0.3s;
+}
 .cube:nth-child(6) {
     -webkit-animation-delay: 0s;
-    animation-delay: 0s; }
+    animation-delay: 0s;
+}
 .cube:nth-child(7) {
     -webkit-animation-delay: 0.1s;
-    animation-delay: 0.1s; }
+    animation-delay: 0.1s;
+}
 .cube:nth-child(8) {
     -webkit-animation-delay: 0.2s;
-    animation-delay: 0.2s; }
+    animation-delay: 0.2s;
+}
 
 @-webkit-keyframes cube-grid-scale {
     0%, 70%, 100% {
         -webkit-transform: scale3D(1, 1, 1);
         transform: scale3D(1, 1, 1);
     } 35% {
-          -webkit-transform: scale3D(0, 0, 1);
-          transform: scale3D(0, 0, 1);
-      }
+        -webkit-transform: scale3D(0, 0, 1);
+        transform: scale3D(0, 0, 1);
+    }
 }
 
 @keyframes cube-grid-scale {
@@ -607,7 +617,7 @@ footer .links {
         -webkit-transform: scale3D(1, 1, 1);
         transform: scale3D(1, 1, 1);
     } 35% {
-          -webkit-transform: scale3D(0, 0, 1);
-          transform: scale3D(0, 0, 1);
-      }
+        -webkit-transform: scale3D(0, 0, 1);
+        transform: scale3D(0, 0, 1);
+    }
 }
