62 files changed, 4714 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/general.css
+++ b/camagru/Public/assets/css/general.css
@@ -550,6 +550,11 @@ footer .links {
     overflow: hidden;
 }
 
+.loading-title {
+    font-size: 3rem;
+    text-transform: uppercase;
+}
+
 .cube-grid {
     width: 3.5rem;
     height: 3.5rem;
