--- a/camagru/Public/assets/css/general.css
+++ b/camagru/Public/assets/css/general.css
@@ -551,13 +551,17 @@ footer .links {
 }
 
 .loading-title {
-    font-size: 3rem;
+    font-size: 2.5rem;
     text-transform: uppercase;
+    position: absolute;
+    top: 15rem;
+    color: #fff;
 }
 
 .cube-grid {
     width: 3.5rem;
     height: 3.5rem;
+    margin: auto 0;
 }
 
 .cube-grid .cube {
