--- a/camagru/Public/assets/css/general.css
+++ b/camagru/Public/assets/css/general.css
@@ -554,14 +554,25 @@ footer .links {
     font-size: 2.5rem;
     text-transform: uppercase;
     position: absolute;
-    top: 15rem;
+    top: 10%;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+    -moz-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    -o-transform: translateX(-50%);
+    transform: translateX(-50%);
+
+}
+
+.loading-title h1 {
+    margin: 0;
     color: #fff;
 }
 
 .cube-grid {
     width: 3.5rem;
     height: 3.5rem;
-    margin: auto 0;
+    margin: auto;
 }
 
 .cube-grid .cube {
