--- a/camagru/Public/assets/css/home.css
+++ b/camagru/Public/assets/css/home.css
@@ -1,4 +1,4 @@
-.inner {
+.main-content {
     padding: 40px 0 0 0;
 }
 
@@ -196,7 +196,7 @@
         overflow-x: auto;
     }
 
-    .inner {
+    .main-content {
         padding: 20px 0;
     }
 }
