--- a/camagru/Public/assets/css/user.css
+++ b/camagru/Public/assets/css/user.css
@@ -1,12 +1,12 @@
-.icons {
+.aside-content .icons {
     font-size: 15px;
 }
 
-.inner {
+.aside-content .inner {
     margin: 2rem 0;
 }
 
-.user-row {
+.aside-content .user-row {
     display: flex;
     flex-direction: column;
     padding: 0 1rem;
@@ -14,7 +14,7 @@
     margin: 0 auto;
 }
 
-.user-infos-row {
+.aside-content .user-infos-row {
     display: flex;
     flex-direction: row;
     transition: 0.2s ease;
@@ -22,33 +22,33 @@
     margin-bottom: 2rem;
 }
 
-.infos {
+.aside-content .infos {
     display: flex;
     flex-direction: row;
     margin: 0 1rem;
     width: 100%;
 }
 
-.infos .u-infos {
+.aside-content .infos .u-infos {
     margin: 2rem 0;
     transition: margin 0.2s ease;
     transition-delay:  0.05s;
 }
 
-.u-infos-global {
+.aside-content .u-infos-global {
     margin: .5rem 0;
 }
 
-.u-infos-fullname {
+.aside-content .u-infos-fullname {
     text-transform: uppercase;
     font-weight: 600;
 }
 
-.u-infos-global .posts .count {
+.aside-content .u-infos-global .posts .count {
     font-weight: bold;
 }
 
-.infos .user-infos-pp {
+.aside-content .infos .user-infos-pp {
     width: 10rem;
     height: 10rem;
     overflow: hidden;
@@ -58,21 +58,21 @@
     transition-delay:  0.05s;
 }
 
-.infos .user-infos-pp img {
+.aside-content .infos .user-infos-pp img {
     width: 100%;
 }
 
-.u-infos-username {
+.aside-content .u-infos-username {
     margin-right: .5rem;
 }
 
-.posts {
+.aside-content .posts {
     display: flex;
     box-sizing: border-box;
     flex-flow: row wrap;
 }
 
-.post {
+.aside-content .post {
     flex: auto;
     width: 10rem;
     position: relative;
@@ -83,14 +83,14 @@
     font-size: 0;
 }
 
-.post .picture img {
+.aside-content .post .picture img {
     width: 100%;
     height: 100%;
     transition: all ease .25s;
     transform: scale(1.025);
 }
 
-.post .details {
+.aside-content .post .details {
     width: 100%;
     height: 100%;
     display: flex;
@@ -103,51 +103,51 @@
     font-size: 15px;
 }
 
-.details .row {
+.aside-content .details .row {
     position: relative;
     width: 100%;
     display: flex;
 }
 
-.details .row .content {
+.aside-content .details .row .content {
     margin: auto;
 }
 
-.posts .post:hover > .picture img {
+.aside-content .posts .post:hover > .picture img {
     transform: scale(1.075);
 }
 
-.posts .post:hover .details {
+.aside-content .posts .post:hover .details {
     opacity: 1;
     transform: scale(1.1);
 }
 
-.inline-flex {
+.aside-content .inline-flex {
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
 }
 
-.inline-flex * {
+.aside-content .inline-flex * {
     flex: 1;
 }
 
 @media only screen and (max-width: 450px) {
-    .infos .user-infos-pp {
+    .aside-content .infos .user-infos-pp {
         width: 5rem;
         height: 5rem;
         margin-right: 2rem;
     }
 
-    .infos .u-infos {
+    .aside-content .infos .u-infos {
         margin: 0;
     }
 
-    .user-row {
+    .aside-content .user-row {
         padding: 0;
     }
 
-    .post {
+    .aside-content .post {
         width: 15rem;
         max-width: 30rem;
         margin: .25rem 0;
@@ -155,11 +155,11 @@
 }
 
 @media only screen and (max-width: 300px) {
-    .u-infos {
+    .aside-content .u-infos {
         display: none;
     }
 
-    .user-infos-pp {
+    .aside-content .user-infos-pp {
         margin: 0 auto !important;
         width: 35vw !important;
         height: 35vw !important;
