63 files changed, 4641 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/profile.css
+++ b/camagru/Public/assets/css/profile.css
@@ -39,6 +39,11 @@
     display: flex;
 }
 
+.aside-content .main-infos-sub {
+    display: flex;
+    flex-direction: column;
+}
+
 .aside-content .inline-flex {
     display: flex;
     flex-direction: row;
