--- a/camagru/Public/assets/css/profile.css
+++ b/camagru/Public/assets/css/profile.css
@@ -33,10 +33,12 @@
     margin: 2rem 0;
     transition: margin 0.2s ease;
     transition-delay:  0.05s;
+    width: 100%;
 }
 
 .aside-content .main-infos {
     display: flex;
+    width: 100%;
 }
 
 .aside-content .main-infos-sub {
@@ -44,16 +46,17 @@
     flex-direction: column;
 }
 
-.aside-content .main-infos-sub {
-    width: 100%;
-}
-
 .aside-content .main-infos-sub .fullname {
     text-transform: uppercase;
+    font-weight: bold;
 }
 
 .aside-content .main-infos-sub .username {
     color: #999;
+}
+
+.aside-content .main-infos-sub .inline-flex * {
+    flex: auto;
 }
 
 .aside-content .inline-flex {
