63 files changed, 4658 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/profile.css
+++ b/camagru/Public/assets/css/profile.css
@@ -44,6 +44,7 @@
 .aside-content .main-infos-sub {
     display: flex;
     flex-direction: column;
+    margin-left: 1rem;
 }
 
 .aside-content .main-infos-sub .fullname {
