63 files changed, 4656 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/profile.css
+++ b/camagru/Public/assets/css/profile.css
@@ -15,6 +15,7 @@
 }
 
 .aside-content .user-infos-row {
+    background-color: red;
     display: flex;
     flex-direction: row;
     transition: 0.2s ease;
