--- a/camagru/Public/assets/css/profile.css
+++ b/camagru/Public/assets/css/profile.css
@@ -22,6 +22,10 @@
     padding: .5rem 0;
 }
 
+.aside-content .user-infos-row:hover {
+    background-color: rgba(15, 15, 15, .15);
+}
+
 .aside-content .u-infos {
     margin: 0 1rem;
     transition: margin 0.2s ease;
