--- a/camagru/Public/assets/css/profile.css
+++ b/camagru/Public/assets/css/profile.css
@@ -20,10 +20,11 @@
     transition: 0.2s ease;
     transition-delay:  0.05s;
     padding: .5rem 0;
+    text-decoration: none;
 }
 
 .aside-content .user-infos-row:hover {
-    background-color: rgba(15, 15, 15, .15);
+    background-color: rgba(15, 15, 15, .025);
 }
 
 .aside-content .u-infos {
