63 files changed, 4664 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/profile.css
+++ b/camagru/Public/assets/css/profile.css
@@ -21,6 +21,7 @@
     transition-delay:  0.05s;
     padding: .5rem 0;
     text-decoration: none;
+    color: black;
 }
 
 .aside-content .user-infos-row:hover {
