63 files changed, 4686 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/login.css
+++ b/camagru/Public/assets/css/login.css
@@ -81,6 +81,10 @@
     text-transform: uppercase;
 }
 
+.content .infos {
+    font-style: italic;
+}
+
 form {
     display: flex;
     flex-direction: column;
