--- a/camagru/Public/assets/css/profile.css
+++ b/camagru/Public/assets/css/profile.css
@@ -40,7 +40,7 @@
 }
 
 .aside-button.button-logout .button-content:hover {
-    background-color: #202020;
+    background-color: #b71c1c;
 }
 
 .aside-button.button-logout .button-content a {
