63 files changed, 4629 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/profile.css
+++ b/camagru/Public/assets/css/profile.css
@@ -35,6 +35,11 @@
     width: 100%;
 }
 
+.aside-button .button-content {
+    float: right;
+    width: 50%;
+}
+
 .aside-button.button-logout .button-content {
     background-color: #e53935;
 }
