--- a/camagru/Public/assets/css/home.css
+++ b/camagru/Public/assets/css/home.css
@@ -24,12 +24,12 @@
     flex-basis: 60%;
 }
 
-.posts {
+.posts-row .posts {
     display: flex;
     flex-direction: column;
 }
 
-.post {
+.posts-row .post {
     display: flex;
     flex-direction: column;
     margin: 0 0 40px 0;
@@ -38,56 +38,56 @@
     border-radius: 2px;
 }
 
-.post .user {
+.posts-row .post .user {
     margin: .5rem 1rem;
 }
 
-.post .author {
+.posts-row .post .author {
     border-bottom: 1px solid rgba(0,0,0,.0975);
 }
 
-.post .user-pp {
+.posts-row .post .user-pp {
     width: 1.7rem;
     height: 1.7rem;
 }
 
-.post .user-infos {
+.posts-row .post .user-infos {
     height: 1.7rem;
 }
 
-.post .user-name a {
+.posts-row .post .user-name a {
     font-size: 12px;
     font-weight: bold;
     text-transform: none;
 }
 
-.post .picture img {
+.posts-row .post .picture img {
     width: 100%;
     height: 100%;
 }
 
-.infos {
+.posts-row .infos {
     display: flex;
     flex-direction: column;
 }
 
-.infos .icons {
+.posts-row .infos .icons {
     display: flex;
     padding: .5rem;
     font-size: 15px;
 }
 
-.infos .icons a {
+.posts-row .infos .icons a {
     margin-right: .75rem;
 }
 
-.like-counts {
+.posts-row .like-counts {
     font-size: 10px;
     color: #999;
     padding: 0 .5rem .5rem .5rem;
 }
 
-.like-counts p {
+.posts-row .like-counts p {
     margin: 0;
 }
 
