--- a/camagru/Public/assets/css/general.css
+++ b/camagru/Public/assets/css/general.css
@@ -229,6 +229,35 @@ body .overlay {
     }
 }
 
+.aside-content .post {
+    display: flex;
+    flex-direction: column;
+    margin: 0 0 40px 0;
+    background-color: #fff;
+    border: 1px solid rgba(0,0,0,.0975);
+    border-radius: 2px;
+}
+
+.aside-content.posts-row .post .picture img {
+    width: 100%;
+    height: 100%;
+}
+
+.aside-content .infos {
+    display: flex;
+    flex-direction: column;
+}
+
+.aside-content .infos .icons {
+    display: flex;
+    padding: .5rem;
+    font-size: 15px;
+}
+
+.aside-content .infos .icons a {
+    margin-right: .75rem;
+}
+
 /** Header */
 
 header {
