--- a/camagru/Public/assets/css/general.css
+++ b/camagru/Public/assets/css/general.css
@@ -238,7 +238,7 @@ body .overlay {
     border-radius: 2px;
 }
 
-.aside-content.posts-row .post .picture img {
+.aside-content .post .picture img {
     width: 100%;
     height: 100%;
 }
