--- a/camagru/Public/assets/css/general.css
+++ b/camagru/Public/assets/css/general.css
@@ -230,42 +230,53 @@ body .overlay {
 }
 
 .aside-content .post {
-    display: flex;
-    flex-direction: column;
-    margin: 0 0 40px 0;
-    background-color: #fff;
-    border: 1px solid rgba(0,0,0,.0975);
-    border-radius: 2px;
+    flex: auto;
+    width: 10rem;
+    position: relative;
+    margin: .25rem;
+    overflow: hidden;
+    display: inline-block;
+    max-width: 20rem;
+    font-size: 0;
 }
 
 .aside-content .post .picture img {
     width: 100%;
     height: 100%;
+    transition: all ease .25s;
+    transform: scale(1.025);
 }
 
-.aside-content .infos {
+.aside-content .post .details {
+    width: 100%;
+    height: 100%;
     display: flex;
-    flex-direction: column;
-}
-
-.aside-content .infos .icons {
-    display: flex;
-    padding: .5rem;
+    position: absolute;
+    bottom: 0;
+    background-color: rgba(43, 43, 43, .6);
+    color: #fff;
+    opacity: 0;
+    transition: 0.15s ease-in-out;
     font-size: 15px;
 }
 
-.aside-content .infos .icons a {
-    margin-right: .75rem;
+.aside-content .details .row {
+    position: relative;
+    width: 100%;
+    display: flex;
 }
 
-.posts-row .like-counts {
-    font-size: 10px;
-    color: #999;
-    padding: 0 .5rem .5rem .5rem;
+.aside-content .details .row .content {
+    margin: auto;
 }
 
-.posts-row .like-counts p {
-    margin: 0;
+.aside-content .posts .post:hover > .picture img {
+    transform: scale(1.075);
+}
+
+.aside-content .posts .post:hover .details {
+    opacity: 1;
+    transform: scale(1.1);
 }
 
 /** Header */
