63 files changed, 4734 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/general.css
+++ b/camagru/Public/assets/css/general.css
@@ -231,7 +231,7 @@ body .overlay {
 
 .aside-content .post {
     flex: auto;
-    width: 10rem;
+    width: 100%;
     position: relative;
     margin: .25rem;
     overflow: hidden;
