--- a/camagru/Public/assets/css/general.css
+++ b/camagru/Public/assets/css/general.css
@@ -230,7 +230,7 @@ body .overlay {
 }
 
 .aside-content .post {
-    width: 100%;
+    width: 10rem;
     position: relative;
     overflow: hidden;
     display: inline-block;
