63 files changed, 4739 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/general.css
+++ b/camagru/Public/assets/css/general.css
@@ -229,6 +229,11 @@ body .overlay {
     }
 }
 
+.aside-content .aside-middle-content {
+    overflow-y: auto;
+    flex: 1;
+}
+
 .aside-content .post {
     width: 10rem;
     position: relative;
