--- a/camagru/Public/assets/css/general.css
+++ b/camagru/Public/assets/css/general.css
@@ -62,9 +62,13 @@ body {
 .aside-bar .head {
     display: flex;
     width: 100%;
-    height: 3.5rem;
+    height: 8%;
     -webkit-box-shadow: 0 0.1rem 0.2rem 0 rgba(123, 104, 104, 0.2);
     box-shadow: 0 0.1rem 0.2rem 0 rgba(123, 104, 104, 0.2);
+}
+
+.aside-bar .aside-content {
+    height: 92%;
 }
 
 .aside-bar .head .title {
