63 files changed, 4725 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/general.css
+++ b/camagru/Public/assets/css/general.css
@@ -131,6 +131,10 @@ body {
     display: flex;
 }
 
+.aside-bar .aside-button.button-logged {
+    position: relative;
+}
+
 .aside-bar .aside-button span {
     margin: auto;
 }
