63 files changed, 4728 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/general.css
+++ b/camagru/Public/assets/css/general.css
@@ -69,6 +69,8 @@ body {
 
 .aside-bar .aside-content {
     height: 92%;
+    display: flex;
+    flex-direction: column;
 }
 
 .aside-bar .head .title {
