--- a/camagru/Public/assets/css/profile.css
+++ b/camagru/Public/assets/css/profile.css
@@ -10,7 +10,6 @@
     display: flex;
     flex-direction: column;
     max-width: 1000px;
-    margin: 0 auto;
     padding: 2rem 0;
 }
 
@@ -43,6 +42,10 @@
 .aside-button .manage-pictures.button-content {
     margin: 0 auto 0 1rem;
     width: 44%;
+}
+
+.aside-bar .aside-button.button-logged {
+    position: relative;
 }
 
 .aside-button.button-logged .button-content {
