--- a/camagru/Public/assets/css/profile.css
+++ b/camagru/Public/assets/css/profile.css
@@ -101,6 +101,60 @@
     flex: auto;
 }
 
+
+.aside-content .post {
+    width: 10rem;
+    position: relative;
+    overflow: hidden;
+    display: inline-block;
+    font-size: 0;
+}
+
+.aside-content .post .picture img {
+    width: 100%;
+    height: 100%;
+    transition: all ease .25s;
+    transform: scale(1.025);
+}
+
+.aside-content .post .details {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    position: absolute;
+    bottom: 0;
+    background-color: rgba(43, 43, 43, .6);
+    color: #fff;
+    opacity: 0;
+    transition: 0.15s ease-in-out;
+    font-size: 15px;
+}
+
+.aside-content .details .row {
+    position: relative;
+    width: 100%;
+    display: flex;
+}
+
+.aside-content .details .row .content {
+    margin: auto;
+}
+
+.aside-content .post:hover > .picture img {
+    transform: scale(1.075);
+}
+
+.aside-content .post:hover .details {
+    opacity: 1;
+    transform: scale(1.1);
+}
+
+.aside-content .aside-middle-content .posts {
+    display: flex;
+    box-sizing: border-box;
+    flex-flow: row wrap;
+}
+
 .aside-content .inline-flex {
     display: flex;
     flex-direction: row;
