--- a/camagru/Public/assets/css/profile.css
+++ b/camagru/Public/assets/css/profile.css
@@ -128,6 +128,7 @@
     opacity: 0;
     transition: 0.15s ease-in-out;
     font-size: 15px;
+    margin-bottom: 1rem;
 }
 
 .aside-content .details .row {
