63 files changed, 4881 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/profile.css
+++ b/camagru/Public/assets/css/profile.css
@@ -108,7 +108,7 @@
     overflow: hidden;
     display: inline-block;
     font-size: 0;
-    margin-bottom: 1rem;
+    margin: .25rem 0;
 }
 
 .aside-content .post .picture img {
