63 files changed, 4881 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/profile.css
+++ b/camagru/Public/assets/css/profile.css
@@ -103,7 +103,7 @@
 
 
 .aside-content .post {
-    width: 10rem;
+    width: 100%;
     position: relative;
     overflow: hidden;
     display: inline-block;
