3 files changed, 76 insertions(+), 38 deletions(-)

--- a/camagru/Public/assets/css/home.css
+++ b/camagru/Public/assets/css/home.css
@@ -29,6 +29,14 @@
     flex-direction: column;
 }
 
+.posts-row .pagination {
+    display: flex;
+}
+
+.posts-row .pagination .inputs {
+    margin: 0 auto;
+}
+
 .posts-row .post {
     display: flex;
     flex-direction: column;
