2 files changed, 14 insertions(+), 10 deletions(-)

--- a/camagru/Public/assets/css/home.css
+++ b/camagru/Public/assets/css/home.css
@@ -38,6 +38,10 @@
     display: flex;
 }
 
+.posts-row .pagination .inputs * {
+    padding: .25rem .5rem;
+}
+
 .posts-row .post {
     display: flex;
     flex-direction: column;
