--- a/camagru/Public/assets/css/home.css
+++ b/camagru/Public/assets/css/home.css
@@ -42,6 +42,10 @@
     padding: .25rem .5rem;
 }
 
+.posts-row .pagination .inputs *:hover {
+    background-color: #333;
+}
+
 .posts-row .post {
     display: flex;
     flex-direction: column;
