--- a/camagru/Public/assets/css/home.css
+++ b/camagru/Public/assets/css/home.css
@@ -34,12 +34,16 @@
 }
 
 .posts-row .pagination .inputs {
-    margin: 1rem auto;
+    margin: 0 auto 1rem auto;
     display: flex;
 }
 
 .posts-row .pagination .inputs * {
-    padding: .25rem .5rem;
+    padding: .25rem .35rem;
+    text-decoration: none;
+    color: #999;
+    border: 1px solid rgba(0,0,0,.0975);
+    margin: 0 10px;
 }
 
 .posts-row .pagination .inputs i {
