--- a/camagru/Public/assets/css/home.css
+++ b/camagru/Public/assets/css/home.css
@@ -36,14 +36,14 @@
 .posts-row .pagination .inputs {
     margin: 0 auto 1rem auto;
     display: flex;
-    border: 1px solid rgba(0,0,0,.0975);
 }
 
-.posts-row .pagination .inputs * {
+.posts-row .pagination .inputs .input {
     padding: .25rem .25rem;
     text-decoration: none;
     color: #999;
     margin: 0 10px;
+    border: 1px solid rgba(0,0,0,.0975);
 }
 
 .posts-row .pagination .inputs i {
