--- a/camagru/Public/assets/css/home.css
+++ b/camagru/Public/assets/css/home.css
@@ -39,15 +39,18 @@
 }
 
 .posts-row .pagination .inputs .input {
-    padding: .25rem .25rem;
-    text-decoration: none;
-    color: #999;
+    padding: .25rem .5rem;
     margin: 0 10px;
     border: 1px solid rgba(0,0,0,.0975);
 }
 
 .posts-row .pagination .inputs i {
     padding: 0;
+}
+
+.post-row .pagination a {
+    text-decoration: none;
+    color: #999;
 }
 
 .posts-row .pagination .inputs *:hover {
