--- a/camagru/Public/assets/css/home.css
+++ b/camagru/Public/assets/css/home.css
@@ -39,7 +39,7 @@
 }
 
 .posts-row .pagination .inputs .input {
-    padding: .25rem .5rem;
+    padding: .25rem .6rem;
     margin: 0 5px;
     border: 1px solid rgba(0,0,0,.0975);
 }
@@ -48,7 +48,7 @@
     padding: 0;
 }
 
-.post-row .pagination a {
+.post-row .pagination .input a {
     text-decoration: none;
     color: #999;
 }
