2 files changed, 5 insertions(+), 5 deletions(-)

--- a/camagru/Public/assets/css/home.css
+++ b/camagru/Public/assets/css/home.css
@@ -48,7 +48,7 @@
     padding: 0;
 }
 
-.post-row .pagination .input a {
+.posts-row .pagination .inputs a {
     text-decoration: none;
     color: #999;
 }
