--- a/camagru/Public/assets/css/profile.css
+++ b/camagru/Public/assets/css/profile.css
@@ -86,6 +86,7 @@
     display: flex;
     flex-direction: column;
     margin-left: 1rem;
+    width: 100%;
 }
 
 .aside-content .main-infos-sub .fullname {
@@ -95,6 +96,7 @@
 
 .aside-content .main-infos-sub .username {
     color: #999;
+    text-align: right;
 }
 
 .aside-content .main-infos-sub .inline-flex * {
