--- a/camagru/Public/assets/css/general.css
+++ b/camagru/Public/assets/css/general.css
@@ -57,6 +57,12 @@ body {
     opacity: 0;
     background-color: #fff;
     border-left: 1px solid rgba(0,0,0,.0975);
+    position: absolute;
+    left: 100%;
+}
+
+body[has_aside] .aside-bar {
+    left: 0;
 }
 
 .aside-bar .head {
@@ -190,13 +196,13 @@ body .overlay {
 }
 
 @-webkit-keyframes show_aside {
-    from {width:0;}
-    to {width:100%;}
+    from {left:100%;}
+    to {left:0;}
 }
 
 @keyframes show_aside {
-    from {width:0;}
-    to {width:100%;}
+    from {left:100%;}
+    to {left:0;}
 }
 
 @-webkit-keyframes show_overlay {
@@ -220,13 +226,13 @@ body .overlay {
 }
 
 @-webkit-keyframes hide_aside {
-    from {width:100%;visibility: visible;opacity:1;}
-    to {width:0;visibility: hidden;opacity:0;}
+    from {left:0;visibility: visible;opacity:1;}
+    to {left:100%;visibility: hidden;opacity:0;}
 }
 
 @keyframes hide_aside {
-    from {width:100%;visibility: visible;opacity:1;}
-    to {width:0;visibility: hidden;opacity:0;}
+    from {left:0;visibility: visible;opacity:1;}
+    to {left:100%;visibility: hidden;opacity:0;}
 }
 
 @media only screen and (max-width: 500px) {
