--- a/camagru/Public/assets/css/general.css
+++ b/camagru/Public/assets/css/general.css
@@ -50,6 +50,10 @@ body {
     visibility: hidden;
 }
 
+.aside-row.hide {
+    visibility: visible;
+}
+
 .aside-bar {
     float: right;
     width: 100%;
@@ -59,10 +63,6 @@ body {
     border-left: 1px solid rgba(0,0,0,.0975);
     position: absolute;
     left: 100%;
-}
-
-.aside-row.hide {
-    visibility: hidden;
 }
 
 body[has_aside] .aside-bar {
