9 files changed, 35 insertions(+), 24 deletions(-)

--- a/camagru/Public/assets/css/general.css
+++ b/camagru/Public/assets/css/general.css
@@ -246,8 +246,12 @@ body .overlay {
 }
 
 .aside-content .aside-middle-content {
-    overflow-y: auto;
+    overflow: hidden;
     flex: 1;
+}
+
+.aside-content .aside-middle-content:hover {
+    overflow-y: auto;
 }
 
 
