--- a/camagru/Public/assets/css/home.css
+++ b/camagru/Public/assets/css/home.css
@@ -1,7 +1,3 @@
-.main-content {
-    padding: 40px 0 0 0;
-}
-
 .home-row {
     display: flex;
     padding: 0 1rem;
@@ -27,6 +23,10 @@
 .posts-row .posts {
     display: flex;
     flex-direction: column;
+}
+
+.posts-row .posts .post:last-child {
+    margin: 0;
 }
 
 .posts-row .pagination {
@@ -133,6 +133,7 @@
     flex-basis: 35%;
     background-color: #fff;
     border-radius: 2px;
+    margin-top: 4em;
 }
 
 .users-row .content {
@@ -232,9 +233,6 @@
         overflow-x: auto;
     }
 
-    .main-content {
-        padding: 20px 0;
-    }
 }
 
 @media only screen and (max-width: 500px) {
