--- a/camagru/Public/assets/css/home.css
+++ b/camagru/Public/assets/css/home.css
@@ -127,6 +127,38 @@
     margin: 0;
 }
 
+.posts-row .post .details {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    position: absolute;
+    bottom: 0;
+    background-color: rgba(43, 43, 43, .6);
+    color: #fff;
+    opacity: 0;
+    transition: 0.15s ease-in-out;
+    font-size: 15px;
+}
+
+.posts-row .details .row {
+    position: relative;
+    width: 100%;
+    display: flex;
+}
+
+.posts-row .details .row .content {
+    margin: auto;
+}
+
+.posts-row .post:hover > .picture img {
+    transform: scale(1.075);
+}
+
+.posts-row .post:hover .details {
+    opacity: 1;
+    transform: scale(1.1);
+}
+
 /** Users row */
 
 .users-row {
