--- a/camagru/Public/assets/css/home.css
+++ b/camagru/Public/assets/css/home.css
@@ -137,12 +137,13 @@
 }
 
 .posts-row .comments {
+    top: 100%;
     width: 100%;
     height: 100%;
     display: flex;
     position: absolute;
     bottom: 0;
-    background-color: rgba(255, 255, 255, .6);
+    background-color: rgba(255, 255, 255, .8);
     color: #fff;
     opacity: 0;
     transition: 0.15s ease-in-out;
@@ -161,6 +162,7 @@
 
 .posts-row .post:hover .comments {
     opacity: 1;
+    top: 0;
 }
 
 /** Users row */
