74 files changed, 5266 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/home.css
+++ b/camagru/Public/assets/css/home.css
@@ -108,7 +108,7 @@
 .posts-row .post-image .picture img {
     width: 100%;
     height: 100%;
-    transition: all ease .25s;
+    transition: all ease 1s;
 }
 
 .posts-row .infos {
