--- a/camagru/Public/assets/css/home.css
+++ b/camagru/Public/assets/css/home.css
@@ -108,7 +108,7 @@
 .posts-row .post-image .picture img {
     width: 100%;
     height: 100%;
-    transition: all ease 1s;
+    transition: all ease .25s;
 }
 
 .posts-row .infos {
@@ -146,7 +146,7 @@
     background-color: rgba(255, 255, 255, .8);
     color: #fff;
     opacity: 0;
-    transition: 0.15s ease-in-out;
+    transition: 0.5s ease-in-out;
     font-size: 15px;
 }
 
