--- a/camagru/Public/assets/css/home.css
+++ b/camagru/Public/assets/css/home.css
@@ -137,13 +137,14 @@
 }
 
 .posts-row .comments {
+    overflow-y: auto;
     top: 100%;
     width: 100%;
     height: 100%;
     display: flex;
     position: absolute;
     bottom: 0;
-    background-color: rgba(255, 255, 255, .8);
+    background-color: rgba(255, 255, 255, .9);
     color: #fff;
     opacity: 0;
     transition: 0.5s ease-in-out;
@@ -156,8 +157,15 @@
     display: flex;
 }
 
-.posts-row .comments .row .content {
-    margin: auto;
+.posts-row .comments .comment {
+    width: 100%;
+    background-color: #fff;
+    color: black;
+    border: 1px solid rgba(0,0,0,.0975);
+}
+
+.posts-row .comments .comment .author {
+    font-weight: bold;
 }
 
 .posts-row .post:hover .comments {
