--- a/camagru/Public/assets/css/home.css
+++ b/camagru/Public/assets/css/home.css
@@ -169,6 +169,7 @@
     background-color: #999;
     color: black;
     border: 1px solid rgba(0,0,0,.0975);
+    align-items: flex-start;
 }
 
 .posts-row .comments .comment .author {
