--- a/camagru/Public/assets/css/home.css
+++ b/camagru/Public/assets/css/home.css
@@ -138,6 +138,7 @@
 
 .posts-row .comments {
     overflow-y: auto;
+    overflow-x: hidden;
     top: 100%;
     width: 100%;
     height: 100%;
@@ -160,6 +161,7 @@
 .posts-row .comments .content {
     width: 100%;
     display: flex;
+    flex-direction: column;
 }
 
 .posts-row .comments .comment {
