--- a/camagru/Public/assets/css/home.css
+++ b/camagru/Public/assets/css/home.css
@@ -158,17 +158,17 @@
     display: flex;
 }
 
-.posts-row .comments .content {
+.posts-row .comments .row .content {
     width: 100%;
     display: flex;
     flex-direction: column;
 }
 
-.posts-row .comments .comment {
+.posts-row .comments .comment .content {
     display: flex;
     flex-direction: column;
     width: 100%;
-    background-color: #999;
+    background-color: #fff;
     color: black;
     border: 1px solid rgba(0,0,0,.0975);
 }
