--- a/camagru/Public/assets/css/home.css
+++ b/camagru/Public/assets/css/home.css
@@ -171,9 +171,10 @@
     background-color: #fff;
     color: black;
     border: 1px solid rgba(0,0,0,.0975);
+    margin: .25rem;
 }
 
-.posts-row .comments .comment .author {
+.posts-row .comments .comment .comment-author {
     font-weight: bold;
 }
 
