--- a/camagru/Public/assets/css/home.css
+++ b/camagru/Public/assets/css/home.css
@@ -171,7 +171,7 @@
     background-color: #fff;
     color: black;
     border: 1px solid rgba(0,0,0,.0975);
-    margin: .25rem;
+    padding: .25rem;
 }
 
 .posts-row .comments .comment .comment-author {
