74 files changed, 5278 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/home.css
+++ b/camagru/Public/assets/css/home.css
@@ -152,13 +152,8 @@
     font-size: 15px;
 }
 
-.posts-row .comments .row {
+.posts-row .comments {
     position: relative;
-    width: 100%;
-    display: flex;
-}
-
-.posts-row .comments .row .content {
     width: 100%;
     display: flex;
     flex-direction: column;
