74 files changed, 5280 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/home.css
+++ b/camagru/Public/assets/css/home.css
@@ -152,7 +152,7 @@
     font-size: 15px;
 }
 
-.posts-row .comments {
+.posts-row .comments .row {
     position: relative;
     width: 100%;
     display: flex;
