74 files changed, 5333 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/home.css
+++ b/camagru/Public/assets/css/home.css
@@ -159,6 +159,14 @@
     flex-direction: column;
 }
 
+.posts-row .comments .comment {
+    margin-bottom: .5rem;
+}
+
+.posts-row .comments:last-child {
+    margin: 0;
+}
+
 .posts-row .comments .comment .content {
     display: flex;
     width: 100%;
