--- a/camagru/Public/assets/css/home.css
+++ b/camagru/Public/assets/css/home.css
@@ -160,7 +160,7 @@
 }
 
 .posts-row .comments .comment {
-    margin-bottom: .5rem;
+    margin-bottom: .25rem;
 }
 
 .posts-row .comments:last-child {
@@ -177,11 +177,11 @@
 
 .posts-row .comments .comment .comment-author {
     font-weight: bold;
-    margin: 0 .25rem;
+    margin: .5rem .25rem;
 }
 
 .posts-row .comments .comment .comment-message {
-    margin: 0 .25rem;
+    margin: .5rem .25rem;
     flex: 1;
 }
 
