--- a/camagru/Public/assets/css/home.css
+++ b/camagru/Public/assets/css/home.css
@@ -150,6 +150,7 @@
     opacity: 0;
     transition: 0.5s ease-in-out;
     font-size: 15px;
+    flex-direction: column;
 }
 
 .posts-row .comments .row {
