74 files changed, 5268 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/home.css
+++ b/camagru/Public/assets/css/home.css
@@ -191,9 +191,11 @@
 }
 
 .posts-row .post .add-comment {
-    display: flex;
-    position: relative;
     width: 100%;
+}
+
+.posts-row .post .add-comment .row {
+    margin: .25rem;
 }
 
 .posts-row .post .add-comment .comment-content {
