--- a/camagru/Public/assets/css/home.css
+++ b/camagru/Public/assets/css/home.css
@@ -195,6 +195,13 @@
 }
 
 .posts-row .post .add-comment .row {
+    position: relative;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.posts-row .post .add-comment .row * {
     margin: .25rem;
 }
 
