--- a/camagru/Public/assets/css/home.css
+++ b/camagru/Public/assets/css/home.css
@@ -185,6 +185,11 @@
     flex: 1;
 }
 
+body[focus_comment] .posts-row .post .comments {
+    top: 0;
+    height: 100%;
+}
+
 .posts-row .post:hover .comments {
     opacity: 1;
     top: 50%;
