--- a/camagru/Public/assets/css/home.css
+++ b/camagru/Public/assets/css/home.css
@@ -190,7 +190,7 @@ body[focus_comment] .posts-row .post .comments {
     height: 100%;
 }
 
-.posts-row .post:hover .comments {
+.posts-row[show_comment] .post .comments {
     opacity: 1;
     top: 50%;
 }
