74 files changed, 5320 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/home.css
+++ b/camagru/Public/assets/css/home.css
@@ -190,7 +190,7 @@ body[focus_comment] .posts-row .post .comments {
     height: 100%;
 }
 
-.posts-row[show_comments] .post .comments {
+.posts-row .post[show_comments] .comments {
     opacity: 1;
     top: 50%;
 }
