74 files changed, 5385 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/home.css
+++ b/camagru/Public/assets/css/home.css
@@ -213,6 +213,9 @@ body[focus_comment] .posts-row .post .comments {
 
 .posts-row .post .add-comment .comment-content {
     flex: 1;
+    border: transparent;
+    background-color: inherit;
+    padding: .5rem 0;
 }
 
 /** Users row */
