74 files changed, 5396 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/home.css
+++ b/camagru/Public/assets/css/home.css
@@ -207,7 +207,7 @@ body[focus_comment] .posts-row .post .comments {
     flex-direction: row;
 }
 
-.posts-row .post .add-comment .row * {
+.posts-row .post .add-comment .row input, .posts-row .post .add-comment .row a, .posts-row .post .add-comment .row i {
     margin: .25rem;
 }
 
