74 files changed, 5400 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/home.css
+++ b/camagru/Public/assets/css/home.css
@@ -207,7 +207,11 @@ body[focus_comment] .posts-row .post .comments {
     flex-direction: row;
 }
 
-.posts-row .post .add-comment .row input, .posts-row .post .add-comment .row a, .posts-row .post .add-comment .row i {
+.posts-row .post .add-comment .row form {
+    width: 100%;
+}
+
+.posts-row .post .add-comment .row input, .posts-row .post .add-comment .row .submit * {
     margin: .25rem;
 }
 
