74 files changed, 5385 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/home.css
+++ b/camagru/Public/assets/css/home.css
@@ -212,6 +212,11 @@ body[focus_comment] .posts-row .post .comments {
     display: flex;
 }
 
+.posts-row .post .add-comment .row a {
+    color: #fafafa;
+}
+
+
 .posts-row .post .add-comment .row input, .posts-row .post .add-comment .row .submit, .posts-row .post .add-comment .row .submit * {
     margin: .25rem;
 }
