74 files changed, 5384 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/home.css
+++ b/camagru/Public/assets/css/home.css
@@ -213,7 +213,7 @@ body[focus_comment] .posts-row .post .comments {
 }
 
 .posts-row .post .add-comment .row a {
-    color: #fafafa;
+    color: #bbb;
 }
 
 
