--- a/camagru/Public/assets/css/home.css
+++ b/camagru/Public/assets/css/home.css
@@ -172,7 +172,7 @@
 .posts-row .comments .comment .content {
     display: flex;
     width: 100%;
-    background-color: #fff;
+    background-color: rgba(255, 255, 255, .85);
     color: black;
 }
 
