78 files changed, 5540 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/home.css
+++ b/camagru/Public/assets/css/home.css
@@ -136,6 +136,10 @@
     margin: 0;
 }
 
+.posts-row .like-button i.red {
+    color: red;
+}
+
 .posts-row .comments {
     overflow-y: auto;
     overflow-x: hidden;
