78 files changed, 5616 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/home.css
+++ b/camagru/Public/assets/css/home.css
@@ -211,7 +211,7 @@ body[focus_comment] .posts-row .post .comments {
     flex-direction: row;
 }
 
-.posts-row .post .add-comment .row form {
+.posts-row .post .add-comment .row {
     width: 100%;
     display: flex;
 }
