78 files changed, 5640 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/home.css
+++ b/camagru/Public/assets/css/home.css
@@ -205,10 +205,11 @@ body[focus_comment] .posts-row .post .comments {
 }
 
 .posts-row .post .add-comment .row {
-    position: relative;
     width: 100%;
     display: flex;
     flex-direction: row;
+    position: absolute;
+    bottom: 0;
 }
 
 .posts-row .post .add-comment .row form {
