--- a/camagru/Public/assets/css/home.css
+++ b/camagru/Public/assets/css/home.css
@@ -198,18 +198,18 @@ body[focus_comment] .posts-row .post .comments {
 .posts-row .post[show_comments] .comments {
     opacity: 1;
     top: 50%;
+    display: flex;
 }
 
 .posts-row .post .add-comment {
     width: 100%;
+    margin-top: auto;
 }
 
 .posts-row .post .add-comment .row {
     width: 100%;
     display: flex;
     flex-direction: row;
-    position: absolute;
-    bottom: 0;
 }
 
 .posts-row .post .add-comment .row form {
